# finbot

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  finbot_chat.db  pyproject.toml
backend/scripts/: evaluate.py  generate_eval_data.py  ingest.py  seed_users.py
backend/src/finbot/: __init__.py
backend/src/finbot/api/: app.py  deps.py  middleware.py
backend/src/finbot/api/routes/: admin_routes.py  auth_routes.py  chat_routes.py
backend/src/finbot/auth/: __init__.py  jwt_handler.py  models.py  rbac.py
backend/src/finbot/chat/: __init__.py  memory.py
backend/src/finbot/config/: __init__.py  settings.py
backend/src/finbot/evaluation/: __init__.py  dataset.py  evaluate.py
backend/src/finbot/generation/: __init__.py  chain.py  llm_client.py  prompts.py
backend/src/finbot/guardrails/: __init__.py  input_guards.py  output_guards.py
backend/src/finbot/ingestion/: __init__.py  chunker.py  metadata_builder.py  parser.py  uploader.py
backend/src/finbot/models/: __init__.py  requests.py  responses.py
backend/src/finbot/retrieval/: __init__.py  embedder.py  rbac_retriever.py  vector_store.py
backend/src/finbot/routing/: __init__.py  router.py  routes.py
backend/src/finbot/utils/: __init__.py  exceptions.py  logger.py
data/: README.md  eval_dataset.json
data/general/: .gitkeep
evaluation/: rbac_test_matrix.json
frontend/: package-lock.json  package.json
plan/: 00_overview.md  01_project_structure.md  02_document_ingestion.md  03_semantic_routing.md  04_guardrails.md  05_ragas_evaluation.md  06_fullstack_app.md
(+11 files in other folders)
